--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 asgiref==3.4.1
 backports.zoneinfo==0.2.1
+dj-database-url==0.5.0
+dj-email-url==1.0.4
 Django==4.0.1
+django-cache-url==3.2.3
+django-crispy-forms==1.13.0
+environs==9.4.0
 gunicorn==20.1.0
+marshmallow==3.14.1
+python-dotenv==0.19.2
 sqlparse==0.4.2
 whitenoise==5.3.0
